; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_array-serializer.c_array_output_write.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_array-serializer.c_array_output_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.array_output_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i8*, i64)* @array_output_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @array_output_write(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.array_output_data*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.array_output_data*
  store %struct.array_output_data* %9, %struct.array_output_data** %7, align 8
  %10 = load %struct.array_output_data*, %struct.array_output_data** %7, align 8
  %11 = getelementptr inbounds %struct.array_output_data, %struct.array_output_data* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = load i64, i64* %6, align 8
  %15 = call i32 @da_push_back_array(i32 %12, i8* %13, i64 %14)
  %16 = load i64, i64* %6, align 8
  ret i64 %16
}

declare dso_local i32 @da_push_back_array(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
